create note function added

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,7 @@
 # NOTE: update this with your service name
 service: notes-api
 
-# Create an optimized package for our functions 
+# Create an optimized package for our functions
 package:
   individually: true
 
@@ -14,19 +14,31 @@ provider:
   name: aws
   runtime: nodejs10.x
   stage: dev
-  region: us-east-1
+  region: ap-south-1
   # To load environment variables externally
   # rename env.example to .env and uncomment
   # the following line. Also, make sure to not
   # commit your .env.
   #
-  #environment:
-  #  SAMPLE_ENV_VAR: ${env:SAMPLE_ENV_VAR}
+  environment:
+    TABLE_NAME: ${env:TABLE_NAME}
+
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dyanmodb:Scan
+        - dyanmodb:Query
+        - dyanmodb:GetItem
+        - dyanmodb:PutItem
+        - dyanmodb:UpdateItem
+        - dyanmodb:DeleteItem
+        - dyanmodb:DescribeItem
+      Resource: "arn:aws:dynamodb:us-east-1:*.*"
 
 functions:
-  hello:
-    handler: handler.hello
+  create:
+    handler: create.main
     events:
       - http:
-          path: hello
-          method: get
+          path: notes
+          method: post
