getting note by id

--- a/serverless.yml
+++ b/serverless.yml
@@ -42,3 +42,9 @@ functions:
       - http:
           path: notes
           method: post
+  get:
+    handler: get.main
+    events:
+      - http:
+          path: notes/{id}
+          method: get
