--- a/serverless.yml
+++ b/serverless.yml
@@ -48,3 +48,9 @@ functions:
       - http:
           path: notes/{id}
           method: get
+  list:
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
