delete function added

--- a/serverless.yml
+++ b/serverless.yml
@@ -60,3 +60,10 @@ functions:
       - http:
           path: notes/{id}
           method: put
+
+  delete:
+    handler: delete.main
+    events:
+      - http:
+          path: notes/{id}
+          method: delete
