--- a/serverless.yml
+++ b/serverless.yml
@@ -33,7 +33,7 @@ provider:
         - dyanmodb:UpdateItem
         - dyanmodb:DeleteItem
         - dyanmodb:DescribeItem
-      Resource: "arn:aws:dynamodb:us-east-1:*.*"
+      Resource: "arn:aws:dynamodb:ap-south-1:694640931613:table/notes"
 
 functions:
   create:
@@ -42,24 +42,28 @@ functions:
       - http:
           path: notes
           method: post
+          authorizer: aws_iam
   get:
     handler: get.main
     events:
       - http:
           path: notes/{id}
           method: get
+          authorizer: aws_iam
   list:
     handler: list.main
     events:
       - http:
           path: notes
           method: get
+          authorizer: aws_iam
   update:
     handler: update.main
     events:
       - http:
           path: notes/{id}
           method: put
+          authorizer: aws_iam
 
   delete:
     handler: delete.main
@@ -67,3 +71,4 @@ functions:
       - http:
           path: notes/{id}
           method: delete
+          authorizer: aws_iam
