Adding a billing API

--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,7 @@ provider:
   #
   environment:
     TABLE_NAME: ${env:TABLE_NAME}
+    STRIPE_SECRET_KEY: ${env.STRIPE_SECRET_KEY}
 
   iamRoleStatements:
     - Effect: Allow
@@ -71,4 +72,12 @@ functions:
       - http:
           path: notes/{id}
           method: delete
+          authorizer: aws_iam
+
+  billing:
+    handler: billing.main
+    events:
+      - http:
+          path: billing
+          method: post
           authorizer: aws_iam
